# rozkoduj-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml
src/rozkoduj_mcp/: __init__.py  auth.py  iam_client.py  logging.py  prompts.py  rate_limit.py  resources.py  server.py  telemetry.py
src/rozkoduj_mcp/services/: scanner.py  ta.py
src/rozkoduj_mcp/tools/: __init__.py  analyze.py  buzz.py  calendar.py  compare.py  decode.py  digest.py  fundamentals.py  ideas.py  instrument.py  leaderboard.py  list_strategies.py  market_pulse.py  movers.py  multitf.py  research.py  scan.py  score.py  search_articles.py  search_knowledge.py  smart_screen.py  strategy.py  strategy_details.py
tests/: conftest.py  test_analyze.py  test_auth.py  test_buzz.py  test_calendar.py  test_compare.py  test_decode.py  test_digest.py  test_entrypoint.py  test_fundamentals.py  test_iam_client.py  test_ideas.py  test_instrument.py  test_leaderboard.py  test_list_strategies.py  test_logging.py  test_market_pulse.py  test_movers.py  test_multitf.py  test_oauth_discovery.py  test_prompts.py  test_rate_limit.py  test_research.py  test_resources.py  test_scan.py  test_scanner.py  test_score.py  test_search_articles.py  test_search_knowledge.py  test_server.py  test_services.py  test_smart_screen.py  test_strategy.py  test_strategy_details.py  test_telemetry.py  test_tool_schemas.py
