[project]
name = "rozkoduj-mcp"
version = "2026.4.19"
description = "Decode the markets with your AI assistant. Screening, analysis, and scoring across stocks, crypto, and forex."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    { name = "Jacek Bogocz", email = "contact@rozkoduj.com" },
]
keywords = [
    "mcp", "mcp-server", "trading", "screening", "technical-analysis",
    "market-data", "stocks", "crypto", "forex",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.26.0,<2.0",
    "httpx>=0.28.0",
]

[project.scripts]
rozkoduj-mcp = "rozkoduj_mcp:main"

[project.urls]
Homepage = "https://rozkoduj.com"
Repository = "https://github.com/rozkoduj/rozkoduj-mcp"
Issues = "https://github.com/rozkoduj/rozkoduj-mcp/issues"
Changelog = "https://github.com/rozkoduj/rozkoduj-mcp/releases"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "anyio>=4.13",
    "mypy>=1.20.0",
    "ruff>=0.15.8",
    "pre-commit>=4.5",
    "coverage>=7.13",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF", "PTH", "PERF",
    "S", "T20", "C4", "A",
]
ignore = ["E501", "S101", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["rozkoduj_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pytest.ini_options]
addopts = ["-ra", "-q", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true

[tool.coverage.run]
source = ["rozkoduj_mcp"]
omit = ["src/rozkoduj_mcp/__init__.py"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover"]
